--- a/bd/build.gradle
+++ b/bd/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.112'  // AWS S3 SDK 의존성 추가
 }
 
 tasks.named('test') {
