--- a/bd/src/main/resources/application.properties
+++ b/bd/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=bd
+server.servlet.context-path=/bd
 
 # application-secret.properties
 spring.config.import=optional:application-secret.properties
@@ -14,3 +15,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# AWS S3
+cloud.aws.s3.bucket=${BUCKET_NAME}
+cloud.aws.stack.auto=false
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.credentials.access-key=${CLOUD_AWS_CREDENTIALS_ACCESS_KEY}
+cloud.aws.credentials.secret-key=${CLOUD_AWS_CREDENTIALS_SECRET_KEY}
