chore: JWT 의존성 추가 및 환경변수 설정

--- a/bd/src/main/resources/application.properties
+++ b/bd/src/main/resources/application.properties
@@ -22,3 +22,8 @@ cloud.aws.stack.auto=false
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.credentials.access-key=${CLOUD_AWS_CREDENTIALS_ACCESS_KEY}
 cloud.aws.credentials.secret-key=${CLOUD_AWS_CREDENTIALS_SECRET_KEY}
+
+# JWT
+security.jwt.secret-key=${JWT_SECRET_KEY}
+    # 1일
+security.jwt.expiration=${JWT_EXPIRATION}
