--- a/bd/build.gradle
+++ b/bd/build.gradle
@@ -36,6 +36,11 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.112'  // AWS S3 SDK 의존성 추가
+
+	// JWT
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // Jackson 을 JSON 파서로 사용
 }
 
 tasks.named('test') {
