fix: 워크플로우 경로 수정

--- a/.github/cd.yml
+++ b/.github/cd.yml
@@ -16,6 +16,10 @@ jobs:
   deploy:
     name: Deploy to Server
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./bd
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
