--- a/.github/ci.yml
+++ b/.github/ci.yml
@@ -25,6 +25,10 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: ./bd
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
