--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
         uses: actions/upload-artifact@v4 # 아티팩트로 업로드
         with:
           name: app-jar
-          path: build/libs/*.jar
+          path: ./bd/build/libs/*.jar
 
   docker-push: # 2) Docker 이미지 빌드/푸시 Job — PR에서는 실행 X
     name: Docker Build & Push
@@ -81,6 +81,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: . # 현재 디렉토리를 빌드 컨텍스트로 사용
+          dockerfile: ./bd/Dockerfile
           push: true # 빌드한 이미지를 Docker Hub에 푸시
           tags: |
             ${{ env.IMAGE }}:latest
