--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,7 +10,7 @@ permissions:
   contents: read
 
 env:
-  IMAGE: ${{ secrets.DOCKER_USERNAME }}/[bd]
+  IMAGE: ${{ secrets.DOCKER_USERNAME }}/leftoversflirting
 
 jobs:
   deploy:
