fix: 이미지 이름 수정 및 경로 수정

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,7 +10,7 @@ permissions:
   contents: read
 
 env:
-  IMAGE: ${{ secrets.DOCKER_USERNAME }}/leftoversflirting
+  IMAGE: ${{ secrets.DOCKER_USERNAME }}/bd
 
 jobs:
   deploy:
