--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ permissions:
 # 전역 환경변수
 env:
   JAVA_VERSION: '21' # 사용할 JDK 버전(프로젝트에 맞게 조정)
-  IMAGE: ${{ secrets.DOCKER_USERNAME }}/leftoversflirting  # Docker Hub 이미지명(소문자 필수)
+  IMAGE: ${{ secrets.DOCKER_USERNAME }}/bd  # Docker Hub 이미지명(소문자 필수)
 
 jobs:
   build: # 1) 빌드 전용 Job — PR과 push 모두 실행
@@ -80,8 +80,8 @@ jobs:
       - name: Build & Push image
         uses: docker/build-push-action@v6
         with:
-          context: . # 현재 디렉토리를 빌드 컨텍스트로 사용
-          dockerfile: ./bd/Dockerfile
+          context: ./bd
+          dockerfile: Dockerfile
           push: true # 빌드한 이미지를 Docker Hub에 푸시
           tags: |
             ${{ env.IMAGE }}:latest
