--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: app-jar
-          path: build/libs
+          path: bd/build/libs
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3 # Docker Hub 로그인
