--- a/bd/src/main/resources/application.properties
+++ b/bd/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.password=${DATABASE_PASSWORD}
 
 # Redis 설정
     # Redis 서버 호스트 주소 (내 컴퓨터에서 실행 중이면 localhost)
-spring.data.redis.host=localhost
+spring.data.redis.host=${SPRING_REDIS_HOST:localhost}
     # Redis 서버 포트 번호 (기본값 6379)
 spring.data.redis.port=6379
 
