chore: OpenAI 사용을 위한 설정 추가

--- a/bd/src/main/resources/application.properties
+++ b/bd/src/main/resources/application.properties
@@ -55,3 +55,8 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
     # 사용자 커스텀 설정, 이메일 인증번호의 유효 시간 (5분). @Value("${auth-code-expiration-millis}") 로 읽어서 사용
 auth-code-expiration-millis=300000
+
+# GPT api
+openai.model=gpt-4o
+openai.api.url=${OPENAI_API_URL}
+openai.api.key=${OPENAI_API_KEY}
